gcc/testsuite/g++.dg/modules/global-1_b.C
// { dg-additional-options "-fmodules-ts" }
import thing;

void bink ()
{
  baz ();
  bar (); // { dg-error "not declared" ""  }
}
